win vs: now with correct paths

--- a/shell/reicast.vcxproj
+++ b/shell/reicast.vcxproj
@@ -64,27 +64,27 @@
     <ClCompile Include="..\core\deps\libwebsocket\server.c" />
     <ClCompile Include="..\core\deps\libwebsocket\service.c" />
     <ClCompile Include="..\core\deps\libwebsocket\sha-1.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_arp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_dev_ppp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_dev_tap_windows.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_dns_client.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_dns_common.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_ethernet.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_fragments.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_icmp4.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_ipv4.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_socket_tcp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_socket_udp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_tcp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_udp.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_device.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_frame.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_md5.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_protocol.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_socket_multicast.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_socket.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_stack.c" />
-    <ClCompile Include="..\core\deps\picotcp\pico_tree.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_arp.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_dev_ppp.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_dev_tap_windows.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_dns_client.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_dns_common.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_ethernet.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_fragments.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_icmp4.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_ipv4.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_socket_tcp.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_socket_udp.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_tcp.c" />
+    <ClCompile Include="..\core\deps\picotcp\modules\pico_udp.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_device.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_frame.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_md5.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_protocol.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_socket_multicast.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_socket.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_stack.c" />
+    <ClCompile Include="..\core\deps\picotcp\stack\pico_tree.c" />
     <ClCompile Include="..\core\deps\xbrz\xbrz.cpp" />
     <ClCompile Include="..\core\deps\zlib\adler32.c" />
     <ClCompile Include="..\core\deps\zlib\compress.c" />
