--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -14,6 +14,8 @@ AS=${CC_PREFIX}as
 STRIP=${CC_PREFIX}strip
 LD=${CC}
 
+CHD5_LZMA := 1
+
 MFLAGS :=
 ASFLAGS :=
 LDFLAGS :=
@@ -232,6 +234,11 @@ else ifneq (,$(findstring vero4k,$(platform)))
 
 else
     $(error Unknown platform)
+endif
+
+# 7-Zip/LZMA settings (CHDv5)
+ifdef CHD5_LZMA
+	CFLAGS += -D_7ZIP_ST -DCHD5_LZMA
 endif
 
 RZDCY_SRC_DIR = $(LOCAL_PATH)/../../core
