CHD: Enable FLAC via library (on Linux builds)

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -15,6 +15,7 @@ STRIP=${CC_PREFIX}strip
 LD=${CC}
 
 CHD5_LZMA := 1
+CHD5_FLAC := 1
 
 MFLAGS :=
 ASFLAGS :=
@@ -239,6 +240,11 @@ endif
 # 7-Zip/LZMA settings (CHDv5)
 ifdef CHD5_LZMA
 	CFLAGS += -D_7ZIP_ST -DCHD5_LZMA
+endif
+
+ifdef CHD5_FLAC
+	CFLAGS += -DCHD5_FLAC
+	LIBS += `pkg-config --libs flac`
 endif
 
 RZDCY_SRC_DIR = $(LOCAL_PATH)/../../core
